# fipindicateur

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Makefile  PRODUCT.md  README.md  flake.nix  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/fipindicateur/: main.go
docs/: DEVELOPMENT.md  FEATURES.md  INSTALL.md  gen_tint_gif.go
internal/config/: autostart.go  autostart_linux.go  autostart_linux_test.go  autostart_other.go  config.go
internal/events/: events.go  events_test.go
internal/histlog/: histlog.go  histlog_test.go
internal/icon/: bars.go  bars_test.go  icon.go  panel_darwin.go  panel_linux.go  panel_other.go  rest.go  rest_test.go  tint.go  tint_test.go
internal/metadata/: artist.go  artist_test.go  icy.go  livemeta.go  livemeta_test.go  manager.go  manager_test.go  metadata.go
internal/mpris/: introspect.go  mpris.go  mpris_other.go
internal/notify/: notify_linux.go  notify_other.go
internal/open/: open.go  open_darwin.go  open_linux.go  open_test.go  open_windows.go
internal/player/: cgo_pkgconfig.go  cgo_windows.go  mpv.go  (+2 more)
packaging/: fipindicateur-watchdog.service  fipindicateur-watchdog.sh  fipindicateur.desktop.in  nfpm.yaml
tasks/: completed_archive.json
tools/enrich/: README.md  pyproject.toml
tools/enrich/enrich/: __init__.py  artists.py  cache.py  cli.py  embed.py  httpclient.py  paths.py  schema.py  wikidata.py
tools/enrich/tests/: test_artists.py  test_schema.py  test_wikidata.py
web/: build.mjs  package-lock.json  package.json  shoot.py  shoot_report.py  shoot_zoom.py  subset-fonts.mjs
(+76 files in other folders)
