[tool.poetry]
name = "fipindicateur-enrich"
version = "1.0.0"
description = "Local companion tool that enriches fipindicateur listening history with Wikidata metadata and a 2D artist map."
authors = ["fipindicateur"]
readme = "README.md"
packages = [{ include = "enrich" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.28"
numpy = ">=1.26"
scikit-learn = ">=1.3"
model2vec = ">=0.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"

[tool.poetry.scripts]
enrich = "enrich.cli:main"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
